force-app/main/default/objects/TriggerCustomSetting__c/TriggerCustomSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manages the execution of the trigger</description>
    <label>Trigger Custom Setting</label>
</CustomObject>