force-app/main/default/objects/TriggerCustomSetting__c/fields/NexusOpportunityAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>NexusOpportunityAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus Opportunity After Insert</label>
    <type>Checkbox</type>
</CustomField>