force-app/main/default/objects/TriggerCustomSetting__c/fields/NexusProjectStatusAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>NexusProjectStatusAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus ProjectStatus After Insert</label>
    <type>Checkbox</type>
</CustomField>