force-app/main/default/objects/TriggerCustomSetting__c/fields/NexusProjectStatusAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>NexusProjectStatusAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus ProjectStatus After Update</label>
    <type>Checkbox</type>
</CustomField>