force-app/main/default/objects/TriggerCustomSetting__c/fields/NexusProjectStatusBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>NexusProjectStatusBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus ProjectStatus Before Insert</label>
    <type>Checkbox</type>
</CustomField>