force-app/main/default/objects/TriggerCustomSetting__c/fields/NexusProjectStatusBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>NexusProjectStatusBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus ProjectStatus Before Update</label>
    <type>Checkbox</type>
</CustomField>