force-app/main/default/objects/TriggerCustomSetting__c/fields/NexusQuoteAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>NexusQuoteAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus Quote After Insert</label>
    <type>Checkbox</type>
</CustomField>